# Self-Improving-AI

Final_Project/: .modalignore  README.md  requirements.txt  run.py  slide.md  tinyzero.py
Final_Project/agentflow/: __init__.py  config.py  solver.py
Final_Project/benchmarks/: download_data.py  run_all_models.py  run_benchmark.py  run_humaneval.py  run_secbench.py  score.py
Final_Project/results/: humaneval_combined.json  secbench_combined.json
Final_Project/train/: flow_grpo.py  flow_grpo_agentflow.py  flow_grpo_humaneval.py  flow_grpo_secbench.py  run_agentflow_pipeline.py  run_train.py  serve_grpo_model.py
week_02/: MDP.py  MDP_Presentation.md  requirements.txt
week_03/: .gitignore  README.md  pyproject.toml  slides.md
week_03/src/rpm_mcts_baseline/: __init__.py  cli.py  dataset_catalog.py  db.py  evaluate.py  generate.py  ingest.py  kb.py  rpm_mcts.py
week_04/: Monte Carlo Policy Gradient.py  README.md  reinforce_walkthrough.pptx
week_05/: README.md  a2c.py  experiments.py  requirements.txt
week_05/results/: HalfCheetah-v5_A2C_GAE_(λ=0.95).json  HalfCheetah-v5_A2C_MC_(λ=1).json  HalfCheetah-v5_A2C_TD(0)_(λ=0).json  HalfCheetah-v5_grid_search.json  Hopper-v5_A2C_GAE_(λ=0.95).json  Hopper-v5_A2C_MC_(λ=1).json  Hopper-v5_A2C_TD(0)_(λ=0).json  Hopper-v5_grid_search.json  Walker2d-v5_A2C_GAE_(λ=0.95).json  Walker2d-v5_A2C_MC_(λ=1).json  Walker2d-v5_A2C_TD(0)_(λ=0).json  Walker2d-v5_grid_search.json
week_06/: README.md  requirements.txt  train_goto.py
week_06/results/: goto_replication_local.json  goto_table1_reference.json
(+900 files in other folders)
